--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     
-    <div class="twocontainer active">
+    <div class="twocontainer">
         <div class="sharingbar">
             <div class="top_part">
                 <div class="sharing">Share My Profile</div>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="text_text">Share via</div>
-            <div class="portion active">
+            <div class="portion">
                 <a href="https://www.instagram.com/" target="_blank">
                     <div>
                         <img src="instagram.png" alt="Error" class="imagportion" id="insta">
